# Python101

./: Classes.py  bankverrichtingen.py  bestellingen.txt  inputValidation.py  oefeningenClasses.py  stock.txt  turtleTest.py
Dev & troubleshooting/: Classes.py  Kassaprogramma.py  Opdracht_Cursusadministratie_JC.py  bankverrichtingen_JC.py  dobbelsteenOvererving.py  kassaprog_JC.py  oefeningenClasses.py
OXO/: biggerOXO.py  biggerOXO_Functions.py
Operator_Overloading/: OperatorOverloading_JC.py
ShooterGame/: pyproject.toml
adventOfCodeSchool/: day1.py  day2.py  day3.py  day4.py  inputDay2.txt  readInput.py
advent_of_code/: day1.py  day2.py
bakkerij/: bakkerij.py  bakkerijFunct.py
bankverrichtingen/: pyproject.toml
busAPI/: pyproject.toml
dev_env/: pyproject.toml
dev_env/dev_env/: dev_env.py
dev_env/tests/: test_dev_env.py
eindproef/: JC_stockbeheer.py  JC_stockbeheerFunct.py
extra oef kerstvakantie/: extraOef1_JC.py  extraOef2_JC.py  (+3 more)
movie-bag/: .env  pyproject.toml
movie-bag/movie_bag/: app.py
movie-bag/movie_bag/database/models/: movie.py  user.py
movie-bag/movie_bag/resources/: auth.py  errors.py  movie.py  reset_password.py  routes.py  user.py
movie-bag/movie_bag/services/: mail_service.py
movie-bag/movie_bag/static/: style.css
movie-bag/movie_bag/templates/: NotImplemented.html  index.html  signup.html
movie-bag/movie_bag/ui/: simplePage.py
movie-bag/tests/: test_movie_bag.py
project/: pyproject.toml
project/project/: app.py
project/project/database/models/: product.py  user.py
project/project/resources/: auth.py  errors.py  routes.py
project/project/static/: style.css
project/project/templates/: login.html  notImplemented.html  signup.html
project/project/ui/: blueprintPage.py
pytest_project/: pyproject.toml
pytest_project/tests/: test_wallet.py
(+85 files in other folders)
