[tool.poetry]
name = "movie-bag"
version = "0.1.0"
description = ""
authors = ["wackojens <wackojens2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
mongoengine = "^0.24.0"
Flask-RESTful = "^0.3.9"
flask-mongoengine = "^1.0.0"
Flask-Bcrypt = "^0.7.1"
Flask-JWT-Extended = "^4.3.1"
Jinja2 = "^3.1.1"
Flask-Mail = "^0.9.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
