[tool.poetry]
name = "pytest_project"
version = "0.1.0"
description = ""
authors = ["wackojens <wackojens2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
